# pxr-ts

./: .gitignore  CMakeLists.txt  README.md  TsTest_Grapher.py  debugCodes.cpp  eval.cpp  knot.cpp  knot.h  pch.h  pyproject-dev.toml  pyproject.toml  sample.cpp  sample.h  spline.cpp  spline.h  splineData.h  tangentConversions.cpp  tsTest_SampleTimes.cpp  tsTest_SampleTimes.h  tsTest_TsEvaluator.cpp  tsTest_TsEvaluator.h  typeHelpers.cpp  types.cpp  types.h  valueTypeDispatch.h  wrapSpline.cpp  wrapTsTest_SampleTimes.cpp  wrapTsTest_TsEvaluator.cpp  wrapTypes.cpp
.github/actions/building-deps/: action.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: pxr-ts-config.cmake.in
script/: museumGraph.py  regressDemo.py
src/: CMakeLists.txt
src/pxr/ts/: api.h  binary.cpp  binary.h  debugCodes.cpp  debugCodes.h  eval.cpp  eval.h  knot.cpp  knot.h  knotData.cpp  knotData.h  knotMap.cpp  knotMap.h  moduleDeps.cpp  pch.h  raii.cpp  raii.h  regressionPreventer.cpp  regressionPreventer.h  sample.cpp  sample.h  spline.cpp  spline.h  splineData.cpp  splineData.h  tangentConversions.cpp  tangentConversions.h  typeHelpers.cpp  typeHelpers.h  types.cpp  types.h  valueTypeDispatch.h
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapKnot.cpp  wrapKnotMap.cpp  wrapRaii.cpp  wrapRegressionPreventer.cpp  wrapSpline.cpp  wrapTangentConversions.cpp  wrapTsTest_AnimXEvaluator.cpp  wrapTsTest_Museum.cpp  wrapTsTest_SampleBezier.cpp  wrapTsTest_SampleTimes.cpp  wrapTsTest_SplineData.cpp  wrapTsTest_TsEvaluator.cpp  wrapTsTest_Types.cpp  wrapTypes.cpp
test/: CMakeLists.txt  TsTest_Baseliner.py  TsTest_Comparator.py  TsTest_MayapyDriver.py  TsTest_MayapyEvaluator.py  testTsDerivatives.py  testTsRegressionPreventer.py  testTsSplineAPI.cpp  testTsSplineSampling.cpp  testTsTangentConversion.cpp  testTsThreadedCOW.cpp  test_AnimXFramework.py  test_MayapyFramework.py  test_MayapyVsAnimX.py  test_TsDerivatives.py  test_TsFramework.py  test_TsRegressionPreventer.py  test_TsVsAnimX.py  test_TsVsBezier.py  test_TsVsMayapy.py  tsTest_AnimXEvaluator.cpp  tsTest_AnimXEvaluator.h  tsTest_AnimXFramework.py  tsTest_MayapyFramework.py  tsTest_MayapyVsAnimX.py  tsTest_Museum.cpp  tsTest_Museum.h  tsTest_SampleBezier.cpp  tsTest_SampleBezier.h  tsTest_SampleTimes.cpp  tsTest_SampleTimes.h  tsTest_SplineData.cpp  tsTest_SplineData.h  tsTest_TsEvaluator.cpp  tsTest_TsEvaluator.h  tsTest_TsFramework.py  tsTest_TsVsAnimX.py  tsTest_TsVsBezier.py  tsTest_TsVsMayapy.py  tsTest_Types.h
test/data/: testTsSplineSampling.txt
test/data/mayapyFramework/: test_Baseline_TsTestBaseline.txt
test/data/tsFramework/: test_Baseline_TsTestBaseline.txt
test/data/tsRegressionPreventer/: InitiallyRegressiveContain_TsTestBaseline.txt  InitiallyRegressiveKeepRatio_TsTestBaseline.txt  InitiallyRegressiveKeepStart_TsTestBaseline.txt  InitiallyRegressiveLimitActive_TsTestBaseline.txt  InitiallyRegressiveNone_TsTestBaseline.txt  MoveStartContain_TsTestBaseline.txt  MoveStartKeepRatio_TsTestBaseline.txt  MoveStartKeepStart_TsTestBaseline.txt  MoveStartLimitActive_TsTestBaseline.txt  MoveStartNone_TsTestBaseline.txt  NoopContain_TsTestBaseline.txt  PostRegressiveContain_TsTestBaseline.txt  PostRegressiveKeepRatio_TsTestBaseline.txt  PostRegressiveKeepStart_TsTestBaseline.txt  PostRegressiveLimitOpposite_TsTestBaseline.txt  PostRegressiveNone_TsTestBaseline.txt  PreRegressiveContain_TsTestBaseline.txt  PreRegressiveKeepRatio_TsTestBaseline.txt  PreRegressiveKeepStart_TsTestBaseline.txt  PreRegressiveLimitActive_TsTestBaseline.txt  PreRegressiveMayaTansContain_TsTestBaseline.txt  PreRegressiveMayaTansKeepRatio_TsTestBaseline.txt  PreRegressiveMayaTansLimitActive_TsTestBaseline.txt  PreRegressiveMayaTansLimitOpposite_TsTestBaseline.txt  PreRegressiveMayaTansNone_TsTestBaseline.txt  PreRegressiveNone_TsTestBaseline.txt  ReorderContain_TsTestBaseline.txt  ReorderKeepRatio_TsTestBaseline.txt  ReorderKeepStart_TsTestBaseline.txt  ReorderLimitOpposite_TsTestBaseline.txt  ReorderNone_TsTestBaseline.txt  ReplaceNone_TsTestBaseline.txt
test/utilities/: CMakeLists.txt
test/utilities/python/: CMakeLists.txt  TsTest_Baseliner.py  TsTest_Comparator.py  TsTest_Grapher.py  TsTest_MayapyDriver.py  TsTest_MayapyEvaluator.py  __init__.py  module.cpp  wrapAnimXEvaluator.cpp  wrapMuseum.cpp  wrapSampleBezier.cpp  wrapSampleTimes.cpp  wrapSplineData.cpp  wrapTsEvaluator.cpp  wrapTypes.cpp
test/utilities/tsTest/: animXEvaluator.cpp  animXEvaluator.h  api.h  museum.cpp  museum.h  sampleBezier.cpp  sampleBezier.h  sampleTimes.cpp  sampleTimes.h  splineData.cpp  splineData.h  tsEvaluator.cpp  tsEvaluator.h  types.h
testenv/: testTsSplineAPI.cpp  testTsSplineSampling.cpp
testenv/testTsSplineSampling.testenv/baseline/: testTsSplineSampling.txt
